FIXED Issue #643- BUGFIX - : RollingPanel without scrollbar.

--- a/crux-smart-faces/src/main/resources/org/cruxframework/crux/smartfaces/client/backbone/common/facesBackboneRollingPanelCommon.css
+++ b/crux-smart-faces/src/main/resources/org/cruxframework/crux/smartfaces/client/backbone/common/facesBackboneRollingPanelCommon.css
@@ -13,3 +13,8 @@
 	order: 2;                       /* NEW, Spec - Opera 12.1, Firefox 20+ */
 }
 
+.rollingPanelBody.faces-RollingPanel-body 
+{
+	overflow-y: hidden;
+	overflow-x: auto;
+}
